tdf#100343: Refresh ValueSets after changing their value

yet another RenderContext regression

Change-Id: I77061f6047fee4be2b70739ff2523a24a847ef12
Reviewed-on: https://gerrit.libreoffice.org/26647
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Katarina Behrens <Katarina.Behrens@cib.de>